--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "个人博客-vue",
+  "name": "blog-vue",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.62",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.62",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.62"
   }
